@@ -1,5 +1,8 @@
 IMOD History
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+2/16/09: Improved messages from Solvematch and guide instructions when the
+center shift is above the limit.
+
 2/15/09: Fixed problem with getting max coordinates in Point2model.
 
 2/7/09: Fixed bug in Splitcorrection for Windows and made chunk sizes as near
